chore: add swagger for avatar upload
